...
                    android:layout_height="wrap_content"
                    android:text="food name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recipe_servings"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Servings : "
                    android:textStyle="normal" />

...
